fix: correct input layout issues

--- a/components/input/src/styles/classic/style.scss
+++ b/components/input/src/styles/classic/style.scss
@@ -67,6 +67,10 @@
     &.right {
       padding-right: 8px;
     }
+
+    > * {
+      margin-right: 8px;
+    }
   }
 
   &.withValue {
