--- a/components/input/src/styles/snowflake/style.scss
+++ b/components/input/src/styles/snowflake/style.scss
@@ -95,6 +95,6 @@
   }
 }
 
-.helpTextWrapper {
+:host([layout*='snowflake']) .helpTextWrapper {
   text-align: center;
 }
